Live site changes are updated

--- a/courses.html
+++ b/courses.html
@@ -50,12 +50,12 @@
                           <!-- Left Menu -->
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                               <ul class="nav navbar-nav leftmenu">
-                                  <li><a href="#">Home </a></li>
+                                  <li><a href="index.html">Home </a></li>
                                   <li><a href="#">Course</a></li>
-                                  <li><a href="#">About Us</a></li>
+                                  <li><a href="#">Mission</a></li>
                                   <li><a href="#">Faculty</a></li>
                                   <li><a href="#">Media</a></li>
-                                  <li><a href="#">Register Now</a></li>
+                                  <li><a href="#">Call Now</a></li>
                               </ul>
                               <ul class="nav navbar-nav navbar-right rightmenu">
                                   <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +91 9886 522 872</a></li>
@@ -81,37 +81,37 @@
               <div class="row">
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/drawing.jpg" alt="" class="img-responsive course-image" />
                           <p class="course-title">Drawing and perspective</p>
                       </div>
                   </div>
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/metallurgy.jpg" alt="" class="img-responsive course-image" />
                           <p class="course-title">Metallurgy</p>
                       </div>
                   </div>
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/gemology.jpg" alt="" class="img-responsive course-image" />
                           <p class="course-title">Gemology</p>
                       </div>
                   </div>
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/diamond_grading.jpg" alt="" class="img-responsive course-image" />
                           <p class="course-title">Diamond grading</p>
                       </div>
                   </div>
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/price_ marketing.png" alt="" class="img-responsive course-image" />
                           <p class="course-title">Pricing and marketing</p>
                       </div>
                   </div>
                   <div class="col-md-4 col-xs-12">
                       <div class="course-wrap">
-                          <img src="http://via.placeholder.com/360x250" alt="" class="img-responsive course-image" />
+                          <img src="img/test_portfolio.jpg" alt="" class="img-responsive course-image" />
                           <p class="course-title">Test and portfolio</p>
                       </div>
                   </div>
@@ -129,10 +129,10 @@
               </div>
               <div class="row">
                   <div class="col-md-6 col-xs-12">
-                      <iframe width="580" height="326" src="https://www.youtube.com/embed/BE17Tu1kr4g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                      <iframe width="580" height="326" src="https://www.youtube.com/embed/_gW_LWCoX88?rel=0" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <div class="col-md-6 col-xs-12">
-                      <p class="ourtrainertext">Our trainer is interviewed by local news channels for having unique and crafty skills.</p>
+                      <p class="ourtrainertext">The Co-founder and lead faculty of Arvaa Academy getting featured in the local news channel Suddi Tv for an interview on jewellery making and its prospects.</p>
                   </div>
               </div>
           </div>
