--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                               <ul class="nav navbar-nav leftmenu">
                                   <li><a href="#">Home </a></li>
-                                  <li><a href="#">Course</a></li>
-                                  <li><a href="#">About Us</a></li>
+                                  <li><a href="courses.html">Course</a></li>
+                                  <li><a href="#">Mission</a></li>
                                   <li><a href="#">Faculty</a></li>
                                   <li><a href="#">Media</a></li>
-                                  <li><a href="#">Register Now</a></li>
+                                  <li><a href="#">Call Now</a></li>
                               </ul>
                               <ul class="nav navbar-nav navbar-right rightmenu">
                                   <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +91 9886 522 872</a></li>
@@ -174,10 +174,10 @@
               </div>
               <div class="row">
                   <div class="col-md-6 col-xs-12">
-                      <iframe width="580" height="326" src="https://www.youtube.com/embed/BE17Tu1kr4g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                      <iframe width="580" height="326" src="https://www.youtube.com/embed/_gW_LWCoX88?rel=0" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <div class="col-md-6 col-xs-12">
-                      <p class="ourtrainertext">Our trainer is interviewed by local news channels for having unique and crafty skills.</p>
+                      <p class="ourtrainertext">The Co-founder and lead faculty of Arvaa Academy getting featured in the local news channel Suddi Tv for an interview on jewellery making and its prospects.</p>
                   </div>
               </div>
           </div>
@@ -209,10 +209,10 @@
                           <i class="fa fa-copyright" aria-hidden="true"></i> 2017 Arvaa Academy
                       </p>
                       <p>
-                          <a href="#"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a>
-                          <a href="#"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a>
+                          <a href="https://www.facebook.com/arvaacademy/"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a>
+                          <!--a href="#"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a>
                           <a href="#"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a>
-                          <a href="#"><i class="fa fa-fw fa-youtube-play" aria-hidden="true"></i></a>
+                          <a href="#"><i class="fa fa-fw fa-youtube-play" aria-hidden="true"></i></a-->
                       </p>
                   </div>
                   <div class="col-md-3">
@@ -231,9 +231,7 @@
                       </p>
                   </div>
                   <div class="col-md-6">
-                      <p>
-                          Map will be added soon
-                      </p>
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.196484412378!2d77.59819001425278!3d13.023156290822136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17af68ef4d19%3A0x87a4c245daa9d180!2sArvaa+Academy!5e0!3m2!1sen!2sin!4v1497367281431" width="555" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
                   </div>
               </div>
           </div>
