--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,7 @@
                                   <li><a href="index.html">Home </a></li>
                                   <li><a href="#">Course</a></li>
                                   <li><a href="#">Mission</a></li>
-                                  <li><a href="#">Faculty</a></li>
+                                  <li><a href="index.html#facultySec">Faculty</a></li>
                                   <li><a href="#">Media</a></li>
                                   <li><a href="#">Call Now</a></li>
                               </ul>
@@ -198,5 +198,15 @@
       <script src="js/angular.min.js"></script>
       <!-- Project JS -->
       <script src="js/scripts.js"></script>
+      <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-101417073-1', 'auto');
+          ga('send', 'pageview');
+
+      </script>
   </body>
 </html>
